[tool.poetry]
name = "wtforms-hcaptcha"
version = "0.1.2"
description = "Custom WTForms field that handles hCaptcha display and validation."
authors = ["Jake Walker <hi@jakew.me>"]
maintainers = ["Jake Walker <hi@jakew.me>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/jake-walker/wtforms-hcaptcha"
repository = "https://github.com/jake-walker/wtforms-hcaptcha"
documentation = "https://github.com/jake-walker/wtforms-hcaptcha"
keywords = ["captcha", "form", "hcaptcha"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = "^3.6"
wtforms = "^2.3.3"
markupsafe = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
pytest-mock = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
